--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "http": "0.0.0",
     "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
+    "ng-auto-complete": "^2.10.3",
     "ng2-charts": "^1.6.0",
+    "ng2-simple-autocomplete": "^0.6.1",
     "post": "0.0.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
